--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "-": "^0.0.1",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
+    "g": "^2.0.1",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^1.19.3",
+    "npm": "^9.3.1",
     "recompose": "^0.30.0",
-    "yarn": "^1.22.18"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
