--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,12 @@
     "@material-ui/lab": "^4.0.0-alpha.13",
     "@material-ui/styles": "^4.0.0",
     "@material/ripple": "^4.0.0",
+    "dotenv": "^8.1.0",
     "install": "^0.12.2",
     "mathjs": "^5.10.3",
     "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "react-gsap": "^1.2.0",
     "react-hot-loader": "^4.12.19",
     "react-redux": "^7.1.0",
@@ -23,12 +23,14 @@
     "react-with-firebase-auth": "^1.0.3",
     "recompose": "^0.30.0",
     "typeface-roboto": "^0.0.54",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "firebase":"^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "cypress": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,5 +47,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-jest": "^24.9.0",
+    "cypress": "^10.9.0",
+    "jest": "^24.9.0",
+    "react-dom": "^16.8.6",
+    "react-test-renderer": "file:16.8.6@testing-library/react@12.1.2",
+    "ts-jest": "^29.0.5"
   }
 }
