--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^1.19.3",
+    "react-date-picker": "^9.2.0",
     "recompose": "^0.30.0",
     "yarn": "^1.22.18"
   },
