--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "@material-ui/lab": "^4.0.0-alpha.13",
     "@material-ui/styles": "^4.0.0",
     "@material/ripple": "^4.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "install": "^0.12.2",
     "mathjs": "^5.10.3",
     "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-calendar": "^4.0.0",
     "react-gsap": "^1.2.0",
     "react-hot-loader": "^4.12.19",
     "react-redux": "^7.1.0",
@@ -47,12 +49,14 @@
     ]
   },
   "devDependencies": {
+    "identity-obj-proxy": "^3.0.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^12.1.2",
     "babel-jest": "^24.9.0",
     "cypress": "^10.9.0",
     "jest": "^24.9.0",
+    "jest-transform-css": "^6.0.1",
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
     "ts-jest": "^29.0.5"
