--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "@date-io/date-fns": "1.x",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@material-ui/pickers": "^3.3.10",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^1.19.3",
-    "react-date-picker": "^9.2.0",
     "recompose": "^0.30.0",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1",
-    "identity-obj-proxy": "^3.0.0"
+    "concurrently": "^4.0.1"
   }
 }
