--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,10 @@
     "@material-ui/lab": "^4.0.0-alpha.13",
     "@material-ui/styles": "^4.0.0",
     "@material/ripple": "^4.0.0",
+    "@date-io/date-fns": "1.x",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@material-ui/pickers": "^3.3.10",
+    "date-fns": "^2.29.3",
     "babel-core": "^7.0.0-bridge.0",
     "install": "^0.12.2",
     "mathjs": "^5.10.3",
