--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,6 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
-    "@material-ui/core": "^4.0.0",
-    "@material-ui/icons": "^4.0.0",
-    "@material-ui/lab": "^4.0.0-alpha.13",
-    "@material-ui/styles": "^4.0.0",
-    "@material/ripple": "^4.0.0",
     "@date-io/date-fns": "1.x",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/pickers": "^3.3.10",
@@ -25,11 +20,23 @@
     "react-hot-loader": "^4.12.19",
     "react-redux": "^7.2.9",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.4.0",
     "react-with-firebase-auth": "^1.0.3",
     "recompose": "^0.30.0",
     "typeface-roboto": "^0.0.54",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.0.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/styles": "^4.0.0",
+    "@material/ripple": "^4.0.0",
+    "array-move": "^2.1.0",
+    "firebase": "^8.6.2",
+    "form-data": "^3.0.0",
+    "react-dom": "^16.8.6",
+    "react-dropzone": "^10.2.1",
+    "react-helmet": "^5.2.1",
+    "react-scripts": "^3.4.3",
+    "react-sortable-hoc": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
