--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
     "node-fetch": "^2.6.1",
     "nodemon": "^1.19.3",
     "recompose": "^0.30.0",
-    "yarn": "^1.22.18"
+    "yarn": "^1.22.18",
+    "body-parser": "^1.18.3",
+    "file-upload": "0.0.0",
+    "firebase": "^8.6.2",
+    "firebase-admin": "^8.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
+    "react-with-firebase-auth": "^1.0.3"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
