--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ node_modules/
 client/node_modules/
 client/build/
 # serviceAccountKey.json
-.env
+# .env
 package-lock.json
 client/package-lock.json
 config.js
