--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "react-calendar": "^4.0.0",
     "react-gsap": "^1.2.0",
     "react-hot-loader": "^4.12.19",
-    "react-redux": "^7.2.9",
+    "react-redux": "8.0.4",
+    "redux": "4.2.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "react-router-dom": "^5.0.1",
     "react-with-firebase-auth": "^1.0.3",
     "recompose": "^0.30.0",
