--- a/package.json
+++ b/package.json
@@ -7,22 +7,25 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.13",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
-    "mysql": "^2.17.1",
-    "node-fetch": "^2.6.1",
-    "nodemon": "^1.19.3",
-    "recompose": "^0.30.0",
-    "yarn": "^1.22.18",
-    "body-parser": "^1.18.3",
     "file-upload": "0.0.0",
     "firebase": "^8.6.2",
     "firebase-admin": "^8.6.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "mysql": "^2.17.1",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.11",
-    "react-with-firebase-auth": "^1.0.3"
+    "nodemon": "^1.19.3",
+    "react-with-firebase-auth": "^1.0.3",
+    "recompose": "^0.30.0",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
